--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,7 +1,6 @@
 :root {
-  --mainColor: #29335c;
-  --mainColorLight: #5767aa;
-  --secondaryColor: #db2b39;
+  --mainColor: #00ac61;
+  --secondaryColor: #000;
   --textColor: #eee;
 }
 
